# sidecar

./: .gitignore  .secrets.baseline  LICENSE  README.md  bootstrap.beta  bootstrap.sh  install_hooks.sh  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml
notes/: methodology.html
samples/notes/: sample.html
sidecar/: __init__.py  cli.py  doctor.py  up.py
sidecar/agent/: agent.py
sidecar/extract/: generic.py
sidecar/providers/: anthropic_client.py  local_ollama.py  openai_client.py
sidecar/rag/: db.py  ingest.py  ingest_cherrytree.py  query.py  retriever.py
sidecar/recognizers/: generic_text.py  httpx_lines.py  nmap_xml.py  nuclei_jsonl.py
sidecar/ui/: ui.py
sidecar/utils/: config.py  env.py  prompt.py  redact.py  schema.py
tests/: test_imports.py
